; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/extr_fsl_rio.c_fsl_local_config_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/extr_fsl_rio.c_fsl_local_config_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rio_mport = type { %struct.rio_priv* }
%struct.rio_priv = type { i64 }

@.str = private unnamed_addr constant [58 x i8] c"fsl_local_config_write: index %d offset %8.8x data %8.8x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rio_mport*, i32, i64, i32, i64)* @fsl_local_config_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsl_local_config_write(%struct.rio_mport* %0, i32 %1, i64 %2, i32 %3, i64 %4) #0 {
  %6 = alloca %struct.rio_mport*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca %struct.rio_priv*, align 8
  store %struct.rio_mport* %0, %struct.rio_mport** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %12 = load %struct.rio_mport*, %struct.rio_mport** %6, align 8
  %13 = getelementptr inbounds %struct.rio_mport, %struct.rio_mport* %12, i32 0, i32 0
  %14 = load %struct.rio_priv*, %struct.rio_priv** %13, align 8
  store %struct.rio_priv* %14, %struct.rio_priv** %11, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load i64, i64* %8, align 8
  %17 = load i64, i64* %10, align 8
  %18 = call i32 @pr_debug(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i32 %15, i64 %16, i64 %17)
  %19 = load %struct.rio_priv*, %struct.rio_priv** %11, align 8
  %20 = getelementptr inbounds %struct.rio_priv, %struct.rio_priv* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* %8, align 8
  %23 = add nsw i64 %21, %22
  %24 = load i64, i64* %10, align 8
  %25 = call i32 @out_be32(i64 %23, i64 %24)
  ret i32 0
}

declare dso_local i32 @pr_debug(i8*, i32, i64, i64) #1

declare dso_local i32 @out_be32(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
